# Genshin_autoTTS

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SAMPLE_AUDIO_LICENSE.md  SECURITY.md  config.example.json  pyproject.toml  release-manifest.json  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: QUICKSTART.zh-CN.md
packaging/: installer.iss  launcher.py
scripts/: build_release.ps1  smoke_test.ps1
src/genshin_autotts/: __init__.py  __main__.py  audio.py  cache.py  capture.py  config.py  credentials.py  demo.py  fixture.py  models.py  ocr.py  pipeline.py  qa.py  runtime.py  text.py  tts.py  ui.py  voice.py
src/genshin_autotts/sample_voicepack/: manifest.json
tests/: test_cache.py  test_config.py  test_credentials.py  test_fixture.py  test_ocr.py  test_pipeline.py  test_qa.py  test_runtime_cloud.py  test_text.py  test_tts.py  test_ui.py  test_voice.py
